--- a/src/PAGES/Product/ProductPage.css
+++ b/src/PAGES/Product/ProductPage.css
@@ -4,6 +4,10 @@
     justify-content: center;
     position: relative;
 }
+.productpage .pc1 img{
+    border-radius: 30px;
+    margin:1rem;
+}
 
 .productpage .pc1 .c11 {
     display: flex;
@@ -288,6 +292,10 @@
 .productpage .desc{
     width: 70%;
     max-width: 900px;
+    color:rgb(61, 53, 53) !important;
+    font-family: "Poppins", sans-serif;
+    font-size: 25px;
+
     align-self: center;
 }
 
@@ -476,15 +484,7 @@
         text-align: center;
     }
 
-    .productpage .desc {
-        width: 90%;
-        max-width: 900px;
-        align-self: center;
-        text-align: center;
-        font-size: 13px;
-        font-weight: 300;
-        color: var(--col2);
-    }
+    
 
     .productpage .rating1 {
         display: flex;
